--- a/index.html
+++ b/index.html
@@ -10,15 +10,31 @@
       justify-content: center;
       align-self: center;
       height: 100vh;
+      flex-direction: column;
     }
 
     h1 {
       font-size: 64px;
       font-weight: 800;
     }
+
+    img {
+      height: auto;
+      max-width: 30%;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-self: center;  
+    }
+
   </style>
 </head>
 <body>
-  <h1>Chutiya banaya tumko!!!!!</h1>
+  <div>
+    <img src="spider.jpg" alt="spider">
+    <h1>"Chutiya banaya tumko!!!"</h1>
+  </div>
 </body>
 </html>
